# fake

./: .gitignore  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  README_CN.md  README_EN.md  build.sh  fakescript.sln  fakescript.vcxproj  fakescript.vcxproj.filters  fuckscript.sln  fuckscript.vcxproj  fuckscript.vcxproj.filters  gen.sh  log.txt  readme.md  readme.txt
.github/workflows/: ccpp.yml
benchmark/: benchmark.sh  loop.fk  loop.lua  loop.py  prime.fk  prime.lua  prime.py  string.fk  string.lua  string.py
fake/: CMakeLists.txt  fake.cpp  fake.vcxproj
flexbison/: bison.y  flex.l
ide/: ide.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ide/Images/: appres.qrc
include/: fake-inc.h  fakescript.h  fuckscript.h  instructions.h  runtime.h  semantic.h  types.h  variant.h
luatest/: 17.lua  8.lua  9.lua  CMakeLists.txt  lua_tinker.cpp  lua_tinker.h  luatest.cpp  luatest.vcxproj
luatest/lua/: lua.c  luac.c
package/: buffer.fk  file.fk  json.fk  list.fk  math.fk  net.fk  string.fk  template.fk  xml.fk
src/: CMakeLists.txt  array.h  asmgen.cpp  asmgen.h  assembler.cpp  assembler.h  binary.cpp  binary.h  bindfunc.cpp  bindfunc.h  bison.cpp  bison.h  buffer.h  buildinfunc.cpp  buildinfunc.h  buildinfuncfile.cpp  buildinfuncfile.h  buildinfuncmath.cpp  buildinfuncmath.h  buildinfuncnet.cpp  buildinfuncnet.h  buildinfuncos.cpp  buildinfuncos.h  buildinfuncstring.cpp  buildinfuncstring.h  codegen.cpp  codegen.h  compiler.cpp  compiler.h  container.cpp  container.h  debuging.cpp  debuging.h  fake-inc.cpp  fake.cpp  fake.h  fakescript.cpp  flex.cpp  fuck.cpp  fuck.h  (+42 more)
src/flexbison/: bison.y  flex.l
src/package/: buffer.h  selector.h
src/win32/: FlexLexer.h  nativecall.asm
test/: CMakeLists.txt  fakebin.cpp  test.cpp  test.fk  test.sh  test.vcxproj
test/sample/: 1.fk  10.fk  11.fk  12.fk  13.fk  14.fk  15.fk  16.fk  17.fk  18.fk  19.fk  2.fk  20.fk  21.fk  22.fk  23.fk  24.fk  25.fk  26.fk  27.fk  28.fk  3.fk  30.fk  32.fk  33.fk  34.fk  36.fk  37.fk  38.fk  39.fk  4.fk  40.fk  41.fk  42.fk  43.fk  44.fk  45.fk  47.fk  47.tpl  47.xml  (+19 more)
test/sample/package/: buffer.fk  file.fk  json.fk  math.fk  net.fk  os.fk  string.fk  xml.fk
testjit/: CMakeLists.txt  testjit.cpp  testjit.vcxproj
