CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(FKSCRIPT)
AUX_SOURCE_DIRECTORY(./src FKSCRIPT_SRC_LIST)
INCLUDE_DIRECTORIES(./include)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${FKSCRIPT_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${FKSCRIPT_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${FKSCRIPT_SRC_LIST})
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64")
SET(EXECUTABLE_OUTPUT_PATH ${FKSCRIPT_BINARY_DIR}/bin)
ADD_LIBRARY(fkscript STATIC ${FKSCRIPT_SRC_LIST})
