CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

set(CMAKE_MACOSX_RPATH 1)

PROJECT(FAKE)
AUX_SOURCE_DIRECTORY(./ FAKE_SRC_LIST)
INCLUDE_DIRECTORIES(../include)
INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(./deps)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${FAKE_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${FAKE_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${FAKE_SRC_LIST})
IF (REMOD)
    SET(CMAKE_CXX_FLAGS "-O3 -Wall -gdwarf-2 -m64 -DNDEBUG")
    MESSAGE("build release lib")
ELSE ()
    SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -gdwarf-2 -m64 -D_DEBUG")
    MESSAGE("build debug lib")
ENDIF ()
SET(LIBRARY_OUTPUT_PATH ${FAKE_BINARY_DIR}/../bin)
ADD_LIBRARY(fake SHARED ${FAKE_SRC_LIST})
