CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(TEST)
AUX_SOURCE_DIRECTORY(./ TEST_SRC_LIST)
INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../include)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${TEST_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${TEST_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${TEST_SRC_LIST})
LINK_DIRECTORIES(${TEST_SOURCE_DIR}/../bin/)
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64 -D_DEBUG")
SET(EXECUTABLE_OUTPUT_PATH ${TEST_BINARY_DIR}/../bin)
ADD_EXECUTABLE(test ${TEST_SRC_LIST})
TARGET_LINK_LIBRARIES(test fkscript profiler)
