CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(FAKEBIN)
AUX_SOURCE_DIRECTORY(./ FAKEBIN_SRC_LIST)
INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../include)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${FAKEBIN_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${FAKEBIN_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${FAKEBIN_SRC_LIST})
LINK_DIRECTORIES(${FAKEBIN_SOURCE_DIR}/../bin/)
IF(REMOD)
SET(CMAKE_CXX_FLAGS "-O3 -Wall -Werror -gdwarf-2 -m64 -DNDEBUG")
MESSAGE("build release fake")
ELSE()
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64 -D_DEBUG")
MESSAGE("build debug fake")
ENDIF()
SET(EXECUTABLE_OUTPUT_PATH ${FAKEBIN_BINARY_DIR}/../bin)
ADD_EXECUTABLE(fakebin ${FAKEBIN_SRC_LIST})
TARGET_LINK_LIBRARIES(fakebin fake)
