CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(TESTJIT)
AUX_SOURCE_DIRECTORY(./ TESTJIT_SRC_LIST)
INCLUDE_DIRECTORIES(./)
INCLUDE_DIRECTORIES(../include)
MESSAGE(STATUS "This is cmdcontroller BINARY dir " ${TESTJIT_BINARY_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE dir " ${TESTJIT_SOURCE_DIR})
MESSAGE(STATUS "This is cmdcontroller SOURCE file " ${TESTJIT_SRC_LIST})
LINK_DIRECTORIES(${TESTJIT_SOURCE_DIR}/../bin/)
SET(CMAKE_CXX_FLAGS "-g3 -O0 -Wall -Werror -gdwarf-2 -m64 -D_DEBUG")
SET(EXECUTABLE_OUTPUT_PATH ${TESTJIT_BINARY_DIR}/../bin)
ADD_EXECUTABLE(testjit ${TESTJIT_SRC_LIST})
TARGET_LINK_LIBRARIES(testjit fkscript profiler)
